--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: full_app
     build:
       context: .
-      dockerfile: Dockerfile.deploy
+      dockerfile: Dockerfile
     ports: 
       - 4201:4201 
     restart: on-failure
@@ -56,12 +56,3 @@ volumes:
 networks:
   fullstack:
     driver: bridge
-
-# services:
-#   go:
-#     build: .
-#     ports:
-#       - 8080:8080
-#     volumes:
-#       - ./:/app
-#     working_dir: /app
