--- a/.realize.yaml
+++ b/.realize.yaml
@@ -15,6 +15,8 @@ schema:
     watcher:
       extensions:
         - go
+        - yaml
+        - json
       paths:
         - /
       ignored_paths:
