--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,11 +2,8 @@ FROM golang:1.14
 
 RUN go get github.com/oxequa/realize
 
-# mapped volume in docker-compose.yml
-ENV APP_HOME /app
-
-# create working dir
-RUN mkdir -p $APP_HOME
+# files in current dir on host will be mount on /build without explicitly copying it as specified in docker-compose.yml
+ENV APP_HOME /build
 
 WORKDIR $APP_HOME
 
